# SIC_XE_Assembler

./: CMakeLists.txt  Makefile  README.md  intermediate.txt  objectFile.txt
include/: assembler.h  opcode.h  symbol_table.h  utils.h
src/: assembler.c  f1.txt  opcode.c  symbol_table.c  utils.c
